api/python/version/0.19/_sources/reference/lazyframe/modify_select.rst.txt
======================
Manipulation/selection
======================

.. currentmodule:: polars
.. autosummary::
   :toctree: api/

    LazyFrame.approx_n_unique
    LazyFrame.approx_unique
    LazyFrame.bottom_k
    LazyFrame.cast
    LazyFrame.clear
    LazyFrame.clone
    LazyFrame.drop
    LazyFrame.drop_nulls
    LazyFrame.explode
    LazyFrame.gather_every
    LazyFrame.fill_nan
    LazyFrame.fill_null
    LazyFrame.filter
    LazyFrame.first
    LazyFrame.group_by
    LazyFrame.group_by_dynamic
    LazyFrame.group_by_rolling
    LazyFrame.groupby
    LazyFrame.groupby_dynamic
    LazyFrame.groupby_rolling
    LazyFrame.head
    LazyFrame.inspect
    LazyFrame.interpolate
    LazyFrame.join
    LazyFrame.join_asof
    LazyFrame.last
    LazyFrame.limit
    LazyFrame.melt
    LazyFrame.merge_sorted
    LazyFrame.rename
    LazyFrame.reverse
    LazyFrame.rolling
    LazyFrame.select
    LazyFrame.select_seq
    LazyFrame.set_sorted
    LazyFrame.shift
    LazyFrame.shift_and_fill
    LazyFrame.slice
    LazyFrame.sort
    LazyFrame.tail
    LazyFrame.take_every
    LazyFrame.top_k
    LazyFrame.unique
    LazyFrame.unnest
    LazyFrame.update
    LazyFrame.with_columns
    LazyFrame.with_columns_seq
    LazyFrame.with_context
    LazyFrame.with_row_count
